; ModuleID = '/home/carl/AnghaBench/linux/net/l2tp/extr_l2tp_netlink.c_l2tp_nl_unregister_ops.c'
source_filename = "/home/carl/AnghaBench/linux/net/l2tp/extr_l2tp_netlink.c_l2tp_nl_unregister_ops.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__L2TP_PWTYPE_MAX = common dso_local global i32 0, align 4
@l2tp_nl_cmd_ops = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @l2tp_nl_unregister_ops(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @__L2TP_PWTYPE_MAX, align 4
  %5 = icmp ult i32 %3, %4
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  %7 = call i32 (...) @genl_lock()
  %8 = load i32**, i32*** @l2tp_nl_cmd_ops, align 8
  %9 = load i32, i32* %2, align 4
  %10 = zext i32 %9 to i64
  %11 = getelementptr inbounds i32*, i32** %8, i64 %10
  store i32* null, i32** %11, align 8
  %12 = call i32 (...) @genl_unlock()
  br label %13

13:                                               ; preds = %6, %1
  ret void
}

declare dso_local i32 @genl_lock(...) #1

declare dso_local i32 @genl_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
